aba membros estilizada

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@600&family=Lexend:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" href="/public/icon.svg" type="image/x-icon">
+    <link rel="icon" href="/icon.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SafeTrack App</title>
   </head>
